# CSE6740-BirdCLEF

./: .gitignore  Dockerfile  README.md  Torch CSE 6740.ipynb  birdclef24-vggish-embedding.ipynb  birdclef24_EDA.ipynb  docker-compose.yaml  environment.yml  exp2-filtered.ipynb  exp3-f1.ipynb  pred_df.pkl  pyproject.toml  requirements.txt  start-dev.sh  val_df.pkl
.ipynb_checkpoints/: Torch CSE 6740 cross entropy-checkpoint.ipynb
app/: birdclef24-vggish-embedding.ipynb  terminal_log_9k_dataset.text
app/src/: config.py  data_loader.py  exp2.ipynb  learn_about_the_model_and_cry.py  main.py  model.py  test_data_loader.ipynb  test_data_loader.py  train.py
app/src/.ipynb_checkpoints/: exp2-checkpoint.ipynb  (+5 more)
code/: denoising.ipynb  finetune.ipynb
exp4/: Torch CSE 6740 cross entropy.ipynb
exp5/: Torch CSE 6740 exp5.ipynb
lightning_logs/version_0/: events.out.tfevents.1731571852.Aegis.32593.0
lightning_logs/version_1/: events.out.tfevents.1731608289.Aegis.32593.1
lightning_logs/version_10/: events.out.tfevents.1732463322.Aegis.2859.1
lightning_logs/version_11/: events.out.tfevents.1732463344.Aegis.2859.2
lightning_logs/version_12/: events.out.tfevents.1732463420.Aegis.2859.3
lightning_logs/version_2/: events.out.tfevents.1731608359.Aegis.32593.2
lightning_logs/version_3/: events.out.tfevents.1731608374.Aegis.32593.3
lightning_logs/version_4/: events.out.tfevents.1731608825.Aegis.32593.4
lightning_logs/version_7/: events.out.tfevents.1731670983.Aegis.10767.0
lightning_logs/version_8/: events.out.tfevents.1731671318.Aegis.10767.1
lightning_logs/version_9/: events.out.tfevents.1732463291.Aegis.2859.0
tf/: 00_physical_devices.ipynb  01_hello_world.ipynb  birdclef24-vggish-embedding.ipynb
tf/.ipynb_checkpoints/: birdclef24-vggish-embedding-checkpoint.ipynb
