[tool.poetry]
name = "cse6740-birdclef"
version = "0.1.0"
description = "GPU enabled birdclef envrionment"
authors = ["giantStaps <ruweima86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
keras = "^3.6.0"
ipykernel = "*"
numpy = "*"
scikit-learn = "*"
pandas = "*"
matplotlib = "^3.9.2"
tqdm = "^4.67.0"
librosa = "^0.10.2.post1"
tensorflow-hub = "^0.16.1"
tensorflow = ">=2.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
