[tool.poetry]
name = "cse6740-birdclef"
version = "0.1.0"
description = "GPU enabled birdclef envrionment"
authors = ["giantStaps <ruweima86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
keras = "^3.6.0"
ipykernel = "*"
numpy = "*"
scikit-learn = "*"
pandas = "*"
matplotlib = "^3.9.2"
tqdm = "^4.67.0"
librosa = "^0.10.2.post1"
tensorflow-hub = "^0.16.1"
tensorflow = ">=2.18"
noisereduce = "^3.0.3"
torch = "^2.5.1"
pytorch-lightning = "^2.4.0"
torchvision = "^0.20.1"
torchtoolbox = "^0.1.8.2"
timm = "^1.0.11"
resampy = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
